# F.A.B.L.E

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RESEARCH_LOG.md  SECURITY_AUDIT_STATE.md  pyproject.toml  railway.toml  upload.sh  vercel.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/agents/: adversarial.py  adversarial_register.py  agent_service.py  base.py  register.py  roles.py
backend/api/: main.py  schemas.py
backend/api/routes/: auth_openrouter.py  experiment.py  feedback.py  graph.py  ingest.py  providers.py  run.py  sessions.py
backend/core/: adversarial_lifecycle.py  auth.py  bus.py  config.py  credentials.py  crypto.py  db.py  embeddings.py  feedback.py  golden_cache.py  guardrails.py  identity.py  knowledge_engine.py  lifecycle.py  memory_service.py  pii.py  repository.py
backend/domains/code_review/: plugin.py
backend/domains/finance/: plugin.py
backend/elm/: engine.py
backend/evaluation/: benchmark.py  export_notebook.py  rubric.py
backend/experiment/: montecarlo.py
backend/rag/: ingest.py  pipeline.py  s3_loader.py  seed_corpus.py  sources.py
backend/router/: model_router.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
infra/aws/: app.py  cdk_stack.py  eks_stack.py
infra/cloudrun/: deploy.sh
infra/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infra/k8s/: kind-config.yaml  setup.sh
infra/supabase/: schema.sql
notebooks/: fable_demo.ipynb
scripts/: seed_rag.py
tests/eval/: code_review_cases.json  finance_cases.json
(+23 files in other folders)
